# cppDiploma

client/: CMakeLists.txt  main.cpp
client/indexer/link_get/: link_get.cpp  link_get.h
client/indexer/sql_database/: sql_database.cpp
client/utils/: utils.cpp
server/: CMakeLists.txt  main.cpp
server/engine/: engine.cpp
